# gbfr-logs

./: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  update.json  vite.config.ts
.github/workflows/: ci.yaml  release.yml
protocol/: Cargo.toml  README.md
protocol/src/: lib.rs
src/: App.css  App.tsx  Footer.tsx  PlayerRow.tsx  Store.ts  Table.tsx  Titlebar.tsx  globals.d.ts  i18n.ts  main.tsx  styles.css  types.ts  utils.test.ts  utils.ts  utils.tsx
src-hook/: Cargo.toml  README.md  build.rs
src-hook/src/: event.rs  hook.rs  lib.rs  process.rs
src-hook/src/hooks/: area.rs  damage.rs  death.rs  ffi.rs  globals.rs  item.rs  mod.rs  player.rs  quest.rs  sba.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  manifest.xml  tauri.conf.json
src-tauri/assets/: skill-groups.json
src-tauri/icons/: icon.icns
src-tauri/lang/: README.md  en.json  ko-KR.json  zh-CN.json  zh-TW.json
src-tauri/lang/bp/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  weapons.json
src-tauri/lang/en/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  ui.json  weapons.json
src-tauri/lang/es/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  weapons.json
src-tauri/lang/fr/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  weapons.json
src-tauri/lang/ge/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  weapons.json
src-tauri/lang/it/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  weapons.json
src-tauri/lang/jp/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  weapons.json
src-tauri/lang/ko/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  ui.json  weapons.json
src-tauri/lang/zh-CN/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  ui.json  weapons.json
src-tauri/lang/zh-TW/: characters.json  enemies.json  items.json  overmasteries.json  quests.json  sigils.json  traits.json  ui.json  weapons.json
src-tauri/src/: main.rs
src-tauri/src/db/: logs.rs  mod.rs
src-tauri/src/parser/: constants.rs  mod.rs
src-tauri/src/parser/v0/: mod.rs
src-tauri/src/parser/v1/: mod.rs  player_state.rs  skill_state.rs
src/assets/: skill-groups.json  skill-groups.ts
src/components/: Footer.tsx  PlayerRow.tsx  SkillBreakdown.tsx  SkillGroupRow.tsx  SkillRow.tsx  Table.tsx  Titlebar.tsx  usePlayerRow.ts  useSkillBreakdown.ts  useSkillGroupRow.tsx  useSkillRow.ts
src/hooks/: getVersion.ts
src/lang/: en.json  zh-CN.json
src/pages/: Logs.css  Logs.tsx  Meter.tsx  Settings.tsx  useMeter.ts  useSettings.ts
src/pages/Logs/: Index.tsx  View.tsx
src/pages/logs/: Index.tsx  View.tsx  useIndex.tsx
src/stores/: useEncounterStore.ts  useLogIndexStore.ts  useMeterSettingsStore.ts
