[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.6"
retour = "0.3.1"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging"] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
fern = { version = "0.6" }
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
