[package]
name = "hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0"
ctor = "0.2.6"
dirs = "5.0"
fern = { version = "0.6" }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
log = "0.4"
pelite = "0.10.0"
retour = { version = "0.3.1", features = ["static-detour"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging"] }
futures = "0.3"
protocol = { path = "../protocol" }
