[package]
name = "hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
console = []

[package.metadata.winres]
OriginalFilename = "hook.dll"
CompanyName = "False Spring"
LegalCopyright = "Copyright (C) False Spring"

[dependencies]
anyhow = "1.0"
ctor = "0.2.6"
dirs = "5.0"
fern = { version = "0.6" }
interprocess = { version = "^2.0", features = ["tokio"] }
log = "0.4"
pelite = "0.10.0"
retour = { version = "0.3.1", features = ["static-detour"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Console"] }
futures = "0.3"
protocol = { path = "../protocol" }
tokio-util = { version = "0.7.11", features = ["codec"] }


[build-dependencies]
winres = "0.1"
