[package]
name = "gbfr-logs"
version = "0.0.141"
description = "GBFR Logs"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
dll-syringe = "0.15.2"
futures = "0.3"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
protocol = { path = "../protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["path-all", "fs-read-file", "updater", "system-tray", "window-show", "window-minimize", "window-maximize", "window-start-dragging", "window-unmaximize", "window-hide", "window-unminimize", "window-close", "shell-open", "devtools", "dialog"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.0", features = ["full"] }
num_enum = "0.7.2"
chrono = "0.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rusqlite_migration = "1.1.0"
zstd = "0.13.0"
strum = "0.26"
strum_macros = "0.26"
cbor4ii = { version = "0.3.2", features = ["use_std", "serde1"] }
log = "^0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
